// Copyright (c) HashiCorp, Inc.
// SPDX-License-Identifier: MPL-2.0

syntax = "proto3";

package hashicorp.consul.catalog.v1alpha1;

enum Protocol {
  PROTOCOL_UNSPECIFIED = 0;
  PROTOCOL_TCP = 1;
  PROTOCOL_HTTP = 2;
  PROTOCOL_HTTP2 = 3;
  PROTOCOL_GRPC = 4;

  // Protocol Mesh indicates that this port can speak Consul's mTLS based mesh protocol.
  PROTOCOL_MESH = 5;
}
